welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:6: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
	    	if(isFacingTrail() == false)
                                ^SlugSnail:10: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
	     else if(isFacingTrail() == true)
                                  ^