welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) 
{
    while(!estSurBiscuit())
    {
	    	if(isFacingTrail() == false)
	    	{
	    		droite()
	     }
	     else if(isFacingTrail() == true)
	     {
	    		avance()
	    		baisseBrosse()
	    		leveBrosse()
	     }
    }
    if(estSurBiscuit())
    {
    		prendBiscuit()
    }
}

def isFacingTrail(c:Color):Boolean = 
{
	if(estFaceMur())
	{
		return false
	}
     avance()
     if(getCouleurSol() == c)
     {
    		recule()
    		return true
     }
     else
     {
    		recule()
	    	return false
     }
}